# DiscordManimator

./: .gitignore  DiscordManimator.py  LICENSE  README.md  Sanjik  config.py  config_example.py  example.config.toml  exampleBackend.py  pyproject.toml
.github/workflows/: codeql.yml
cogs/: manimate.py  mdoc.py  mdocstring.py  mhelp.py  msearch.py  render_codeblock.py  search_doc.py
discordmanimator/: DiscordManimator.py  __main__.py
discordmanimator/cogs/: render_codeblock.py  search_doc.py
docker/: Dockerfile
oldcogs/: errorHandler.py  mhelp.py
