[tool.poetry]
name = "discordmanimator"
version = "0.1.0"
description = ""
authors = ["Manim Community Developers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2"
python-dotenv = "^0.17"
docker = "^5.0"
black = {version = "^21.5b1", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
