[project]
name = "discordmanimator"
version = "0.1.0"
description = ""
authors = [{ name = "Manim Community Developers" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "discord.py",
    "python-dotenv",
    "docker",
    "aiodocker",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
